# storage/api-docs/api-docs.json
@@ -341,22 +341,24 @@
                         "type": "array",
                         "items": {
                             "required": [
-                                "day",
+                                "day_of_week",
                                 "start_time",
                                 "end_time"
                             ],
                             "properties": {
-                                "day": {
-                                    "type": "string",
+                                "day_of_week": {
+                                    "description": "Day of week (0=Sunday, 6=Saturday)",
+                                    "type": "integer",
                                     "enum": [
-                                        "Monday",
-                                        "Tuesday",
-                                        "Wednesday",
-                                        "Thursday",
-                                        "Friday",
-                                        "Saturday",
-                                        "Sunday"
-                                    ]
+                                        0,
+                                        1,
+                                        2,
+                                        3,
+                                        4,
+                                        5,
+                                        6
+                                    ],
+                                    "example": "0,1,2,3,4,5,6"
                                 },
                                 "start_time": {
                                     "type": "string",
